v1.1.0/modules/schema/pages/class/LoadAggregationPoint.adoc
= `LoadAggregationPoint`
:toclevels: 4


+++A specialized class of type AggregatedNode type. Defines Load Aggregation Points.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LoadAggregationPoint`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/AggregateNode.adoc[`AggregateNode`]
*** *`LoadAggregationPoint`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<AreaLoadCurve,`AreaLoadCurve`>>
//| [[slots_table.AreaLoadCurve]]<<AreaLoadCurve,`AreaLoadCurve`>>
| 0..* +
xref::class/AreaLoadCurve.adoc[`AreaLoadCurve`]
| _n/a_
| xref::class/AggregateNode.adoc[`AggregateNode`]

| <<CnodeDistributionFactor,`CnodeDistributionFactor`>>
//| [[slots_table.CnodeDistributionFactor]]<<CnodeDistributionFactor,`CnodeDistributionFactor`>>
| 0..* +
xref::class/CnodeDistributionFactor.adoc[`CnodeDistributionFactor`]
| _n/a_
| xref::class/AggregateNode.adoc[`AggregateNode`]

| <<Instruction,`Instruction`>>
//| [[slots_table.Instruction]]<<Instruction,`Instruction`>>
| 0..* +
xref::class/Instructions.adoc[`Instructions`]
| _n/a_
| xref::class/AggregateNode.adoc[`AggregateNode`]

| <<Pnode,`Pnode`>>
//| [[slots_table.Pnode]]<<Pnode,`Pnode`>>
| 0..* +
xref::class/Pnode.adoc[`Pnode`]
| _n/a_
| xref::class/AggregateNode.adoc[`AggregateNode`]

| <<RTO,`RTO`>>
//| [[slots_table.RTO]]<<RTO,`RTO`>>
| 1 +
xref::class/RTO.adoc[`RTO`]
| _n/a_
| xref::class/AggregateNode.adoc[`AggregateNode`]

| <<RegisteredResource,`RegisteredResource`>>
//| [[slots_table.RegisteredResource]]<<RegisteredResource,`RegisteredResource`>>
| 0..* +
xref::class/RegisteredResource.adoc[`RegisteredResource`]
| +++A RegisteredResource can be associated to only one AggregateNode if not connected to a Pnode or MktConnectivityNode.+++
| xref::class/AggregateNode.adoc[`AggregateNode`]

| <<SubControlArea,`SubControlArea`>>
//| [[slots_table.SubControlArea]]<<SubControlArea,`SubControlArea`>>
| 0..* +
xref::class/SubControlArea.adoc[`SubControlArea`]
| _n/a_
| xref::class/AggregateNode.adoc[`AggregateNode`]

| <<anodeType,`anodeType`>>
//| [[slots_table.anodeType]]<<anodeType,`anodeType`>>
| 0..1 +
xref::enumeration/AnodeType.adoc[`AnodeType`]
| +++Type of aggregated node+++
| xref::class/AggregateNode.adoc[`AggregateNode`]

| <<qualifASOrder,`qualifASOrder`>>
//| [[slots_table.qualifASOrder]]<<qualifASOrder,`qualifASOrder`>>
| 0..1 +
https://w3id.org/linkml/Integer[`integer`]
| +++Processing Order for AS self-provisions for this region. The priority of this attribute directs the awards of any resource...+++
| xref::class/AggregateNode.adoc[`AggregateNode`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#anodeType]
=== `anodeType`
+++Type of aggregated node+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.anodeType`
| Cardinality
| 0..1
| Type
| xref::enumeration/AnodeType.adoc[`AnodeType`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

////
[.text-left]
--
<<slots_table.anodeType,&#10548;>>
--
////


//[discrete]
[#AreaLoadCurve]
=== `AreaLoadCurve`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.AreaLoadCurve`
| Cardinality
| 0..*
| Type
| xref::class/AreaLoadCurve.adoc[`AreaLoadCurve`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

////
[.text-left]
--
<<slots_table.AreaLoadCurve,&#10548;>>
--
////


//[discrete]
[#CnodeDistributionFactor]
=== `CnodeDistributionFactor`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.CnodeDistributionFactor`
| Cardinality
| 0..*
| Type
| xref::class/CnodeDistributionFactor.adoc[`CnodeDistributionFactor`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

////
[.text-left]
--
<<slots_table.CnodeDistributionFactor,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#Instruction]
=== `Instruction`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.Instruction`
| Cardinality
| 0..*
| Type
| xref::class/Instructions.adoc[`Instructions`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

////
[.text-left]
--
<<slots_table.Instruction,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#Pnode]
=== `Pnode`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.Pnode`
| Cardinality
| 0..*
| Type
| xref::class/Pnode.adoc[`Pnode`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

////
[.text-left]
--
<<slots_table.Pnode,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#qualifASOrder]
=== `qualifASOrder`
+++Processing Order for AS self-provisions for this region. The priority of this attribute directs the awards of any resource that resides in overlapping regions. The regions are processed in priority manner.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.qualifASOrder`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Integer[`integer`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

////
[.text-left]
--
<<slots_table.qualifASOrder,&#10548;>>
--
////


//[discrete]
[#RegisteredResource]
=== `RegisteredResource`
+++A RegisteredResource can be associated to only one AggregateNode if not connected to a Pnode or MktConnectivityNode.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.RegisteredResource`
| Cardinality
| 0..*
| Type
| xref::class/RegisteredResource.adoc[`RegisteredResource`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

////
[.text-left]
--
<<slots_table.RegisteredResource,&#10548;>>
--
////


//[discrete]
[#RTO]
=== `RTO`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.RTO`
| Cardinality
| 1
| Type
| xref::class/RTO.adoc[`RTO`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

////
[.text-left]
--
<<slots_table.RTO,&#10548;>>
--
////


//[discrete]
[#SubControlArea]
=== `SubControlArea`



[cols="h,4",width=65%]
|===
| URI
| `cim:AggregateNode.SubControlArea`
| Cardinality
| 0..*
| Type
| xref::class/SubControlArea.adoc[`SubControlArea`]

| Inherited from
| xref::class/AggregateNode.adoc[`AggregateNode`]


|===

////
[.text-left]
--
<<slots_table.SubControlArea,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
